[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reiuji_cli"
version = "0.1.0-dev"
dependencies = [
    "reiuji @ git+https://github.com/MtCelesteMa/reiuji.git@68f56fb726eea08b86bbe3cbb24c24dfbad633e5",
    "typer"
]
requires-python = ">=3.12"
authors = [
    {name = "Celeste Ma", email = "gerry.y.ma@gmail.com"}
]
description = "A command line interface for Reiuji."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["reiuji", "cli", "command line interface", "minecraft", "nuclearcraft"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Other Audience",
    "Topic :: Games/Entertainment",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12"
]

[project.scripts]
reiuji = "reiuji_cli:app"

[project.urls]
Homepage = "https://github.com/MtCelesteMa/reiuji-cli"
"Bug Tracker" = "https://github.com/MtCelesteMa/reiuji-cli/issues"
